Added ViewPager for records, refactoring

--- a/presentation/src/main/res/layout/fragment_add_background_item.xml
+++ b/presentation/src/main/res/layout/fragment_add_background_item.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="bgItem"
             type="String" />
@@ -13,16 +14,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/bg_card"
-            android:layout_width="60dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             app:bgColor="@{bgItem}"
             tools:background="@color/colorPrimary" />
 
